<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dieggnostics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stand_auto_submit">Submit</string>
    <string name="stand_auto_totes">Totes</string>
    <string name="stand_auto_new">New</string>
    <string name="stand_auto_old">Old</string>
    <string name="stand_auto_close">Close</string>
    <string name="stand_auto_far">Far</string>
    <string name="stand_auto_cooperatition">Cooperatition</string>
    <string name="stand_auto_undo">Undo</string>
    <string name="stand_auto_redo">Redo</string>
	<string name="stand_auto_litter">Litter</string>
	<string name="stand_auto_containers">Containers</string>
	<string name="stand_auto_container">Container</string>
	<string name="stand_auto_landfill">Landfill</string>
	<string name="stand_auto_other_side">Other Side</string>
	<string name="stand_auto_tipped">Tipped</string>
	<string name="stand_auto_collected">Collected</string>
	<string name="stand_auto_0">0</string>
	<string name="stand_auto_1">1</string>
	<string name="stand_auto_2">2</string>
	<string name="stand_auto_3">3</string>
	<string name="stand_auto_4">4</string>
	<string name="stand_auto_errors">Errors</string>
	<string name="stand_auto_auto">Auto</string>
	<string name="stand_auto_tele">Tele</string>
	<string name="stand_auto_final">Final</string>
	<string name="stand_auto_plus">+</string>
	<string name="stand_auto_minus">-</string>
	<string name="stand_auto_notes">Notes</string>
	<string name="stand_auto_made_autozone">Made Autozone?</string>
	<string name="stand_auto_stacked_totes">Stacked Totes?</string>
	<string name="stand_auto_ended_autozone">Ended in Autozone?</string>
	<string name="stand_login_login">Login</string>
	<string name="stand_login_enter_id">Enter your ID:</string>
	<string name="stand_login_default_name">John Doe</string>
    
</resources>
