<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:minHeight="5000dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button4"
        android:layout_marginRight="15dp"
        android:text="@string/stand_auto_redo" />

    <SurfaceView
        android:id="@+id/totes_surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/button3"
        android:minHeight="1000dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/totes_surface"
        android:text="@string/stand_auto_close" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/totes_surface"
        android:text="@string/stand_auto_far" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totes_surface"
        android:layout_alignRight="@+id/totes_surface"
        android:layout_marginRight="176dp"
        android:text="@string/stand_auto_totes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/container30"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="top" />

        <Button
            android:id="@+id/container20"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/container30"
            android:gravity="top" />

        <Button
            android:id="@+id/container21"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/container31"
            android:layout_alignBottom="@+id/container31"
            android:layout_toLeftOf="@+id/container30"
            android:gravity="top" />

        <Button
            android:id="@+id/container10"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/container20"
            android:gravity="top" />

        <Button
            android:id="@+id/container11"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/container21"
            android:layout_alignBottom="@+id/container21"
            android:layout_toLeftOf="@+id/container20"
            android:gravity="top" />

        <Button
            android:id="@+id/container01"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/container11"
            android:layout_alignBottom="@+id/container11"
            android:layout_toLeftOf="@+id/container10"
            android:gravity="top" />

        <Button
            android:id="@+id/container00"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/container10"
            android:gravity="top" />

        <Button
            android:id="@+id/container31"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/container30"
            android:gravity="top" />

        <Button
            android:id="@+id/container32"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/container31"
            android:gravity="top" />

        <Button
            android:id="@+id/container22"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/container32"
            android:layout_alignBottom="@+id/container32"
            android:layout_toLeftOf="@+id/container32"
            android:gravity="top" />

        <Button
            android:id="@+id/container12"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container21"
            android:layout_toLeftOf="@+id/container21"
            android:gravity="top" />

        <Button
            android:id="@+id/container02"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container11"
            android:layout_toLeftOf="@+id/container11"
            android:gravity="top" />

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@+id/textView5" >

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="75dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/Button10"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_auto_minus"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_auto_0"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/Button09"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_auto_plus"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/LinearLayout04"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/Button12"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_auto_minus"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/TextView08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_auto_0"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/Button11"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_auto_plus"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/LinearLayout05"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:text="@string/stand_auto_container"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/LinearLayout05"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24dp"
                android:text="@string/stand_auto_landfill"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/container00"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@+id/container00"
            android:text="@string/stand_auto_other_side"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/relativeLayout4"
            android:layout_toLeftOf="@+id/container02"
            android:text="@string/stand_auto_tipped"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/container01"
            android:layout_alignRight="@+id/TextView01"
            android:layout_marginBottom="10dp"
            android:text="@string/stand_auto_collected"
            android:textSize="20sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/stand_auto_cooperatition" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toRightOf="@+id/totes_surface"
        android:text="@string/stand_auto_undo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/stand_auto_errors"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button04"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_minus"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/Button03"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_plus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button06"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_minus"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/Button05"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_plus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button08"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/stand_auto_minus"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/Button07"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_auto_plus"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button2"
        android:text="@string/stand_auto_submit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

</RelativeLayout>